fix: adjust header spacing and container padding

--- a/src/blocks/HeaderMinify/HeaderMinify.scss
+++ b/src/blocks/HeaderMinify/HeaderMinify.scss
@@ -11,7 +11,7 @@ $backgroundWidth: 1440px;
 
     &_header-space {
         padding-top: var(--header-height);
-        margin-top: calc(var(--header-height) * -1);
+        margin-top: calc((var(--header-height) + 30px) * -1);
     }
 
     &__video {
@@ -24,7 +24,7 @@ $backgroundWidth: 1440px;
     }
 
     &__container {
-        padding-top: 256px;
+        padding-top: 180px;
         padding-bottom: 155px;
     }
 
